# python-RAT

./: .gitignore  .gitmodules  CONTRIBUTING.md  DSPC_bilayer_example.py  DSPC_custom_layers_example.py  MANIFEST.in  README.md  alloyDomains.py  customBilayer.py  domains_custom_layers_example.py  events.py  misc.py  pyproject.toml  rat.cpp  requirements-dev.txt  requirements.txt  setup.py
.github/: issue_template.md
.github/workflows/: build_wheel.yml  release.yml  runTests.yml  run_ruff.yml  run_tests.yml
RAT/: DREAMWrapper.cpp  DREAMWrapper.h  RATMain.cpp  RATMain.h  RATMain_data.cpp  RATMain_data.h  RATMain_initialize.cpp  RATMain_internal_types.h  RATMain_rtwutil.cpp  RATMain_rtwutil.h  RATMain_types.h  SLDFunction.cpp  SLDFunction.h  __init__.py  abelesParallelPoints.cpp  abelesParallelPoints.h  abelesSingle.cpp  abelesSingle.h  abs.h  acos.cpp  adaptPCR.cpp  adaptPCR.h  adaptive.cpp  adaptive.h  all.cpp  allOrAny.cpp  allOrAny.h  allocateLayersForContrast.cpp  allocateLayersForContrast.h  allocateParamsToLayers.cpp  allocateParamsToLayers.h  anyNonFinite.cpp  applyBackgroundCorrection.cpp  applyBackgroundCorrection.h  applyHydrationReal.cpp  asinh.h  backSort.cpp  backSort.h  blockedSummation.cpp  blockedSummation.h  (+365 more)
RAT/examples/: main.cpp  main.h
RAT/examples/absorption/: absorption.py  volumeThiolBilayer.py  volume_thiol_bilayer.py
RAT/examples/domains/: alloyDomains.py  alloy_domains.py  domainsXY.py  domains_XY.py  domains_XY_model.py  domains_custom_XY.py  domains_custom_layers.py  domains_standard_layers.py  standard_layers.py
RAT/examples/languages/: customBilayer.py  custom_bilayer.m  custom_bilayer.py  run_custom_file_languages.py  setup_problem.py
RAT/examples/non_polarised/: DSPC_custom_XY.py  DSPC_custom_layers.py  DSPC_standard_layers.py  customBilayerDSPC.py  customXYDSPC.py  custom_XY_DSPC.py  custom_bilayer_DSPC.py
RAT/test_data/: all_layers_1.csv  all_layers_2.csv  reflectivity_2.csv  shifted_data_1.csv  shifted_data_3.csv  sld_profiles_1.csv  sld_profiles_2.csv
RAT/utils/: CustomErrors.py  custom_errors.py  dataclasses.py  enums.py  misc.py  plotting.py
RAT/utils/plotting/: matplotlib_plotting.py  pyqt_plotting.py  test_plotting.py
RATapi/: __init__.py  classlist.py  controls.py  events.py  inputs.py  models.py  outputs.py  project.py  run.py  wrappers.py
RATapi/examples/: __init__.py
RATapi/examples/absorption/: absorption.ipynb  absorption.py  volume_thiol_bilayer.py
RATapi/examples/bayes_benchmark/: bayes_benchmark.ipynb  bayes_benchmark.py
RATapi/examples/convert_rascal_project/: Model_IIb.py  convert_rascal.ipynb  convert_rascal.py
RATapi/examples/data/: __init__.py  (+1 more)
RATapi/utils/: __init__.py  convert.py  custom_errors.py  enums.py  orso.py  plotting.py
RATpy/: __init__.py  classlist.py  controls.py  events.py  inputs.py  models.py  outputs.py  project.py  run.py  wrappers.py
RATpy/utils/: plotting.py
_github/workflows/: runTests.yml
_ratapi/: events.py  inputs.py  outputs.py
_ratapi/utils/: convert.py  enums.py
cpp/: rat.cpp
cpp/RAT/: RATMain.cpp  RATMain_data.h  RATMain_rtwutil.cpp  RATMain_rtwutil.h  RATMain_terminate.cpp  RATMain_types.h  SLDFunction.cpp  abelesParallelPoints.cpp  abelesSingle.cpp  abs.cpp  adaptPCR.cpp  adaptive.h  all.h  allOrAny.cpp  allOrAny.h  allocateLayersForContrast.h  allocateParamsToLayers.h  anyNonFinite.h  applyHydrationImag.cpp  applyHydrationImag.h  applyHydrationReal.h  asinh.cpp  asymconvstep.cpp  asymconvstep.h  averageReflectivity.cpp  averageReflectivity.h  blockedSummation.cpp  blockedSummation.h  bsearch.cpp  bsearch.h  bsxfun.h  calcDensity.cpp  calcDensity.h  calcEllipsoid.h  calcProposal.cpp  calcProposal.h  calculate.cpp  calculate1.cpp  calculate1.h  calculate3.cpp  (+214 more)
cpp/includes/: defines.h  functions.h
cpp/matlab/: matlabCaller.cpp  matlabCaller.h  matlabCallerImpl.hpp
data/dspc_bilayer/: data1.csv  data2.csv
events/: eventManagerImpl.hpp
examples/: DSPC_bilayer_example.py  DSPC_custom_layers_example.py  alloyDomains.cpp  customBilayer.m  domains_custom_layers_example.py
rat/: __init__.py  events.py  misc.py
ratapi/: __init__.py  classlist.py  controls.py  events.py  inputs.py  matlab.txt  models.py  outputs.py  project.py  run.py  wrappers.py
ratapi/examples/: __init__.py
ratapi/utils/: __init__.py  convert.py  custom_errors.py  enums.py  orso.py  plotting.py
tests/: conftest.py  test_classlist.py  test_controls.py  test_convert.py  test_custom_errors.py  test_enums.py  test_events.py  test_examples.py  test_inputs.py  test_misc.py  test_models.py  test_orso_utils.py  test_orso_validation.py  test_outputs.py  test_plotting.py  test_project.py  test_run.py  test_wrappers.py  utils.py
tests/plotting_test_data/: reflectivity_3.csv  shifted_data_2.csv  sld_profiles_3.csv
tests/test_data/: R1DSPCBilayer.mat  bare_substrate.json  bare_substrate.ort  inter_data.ort  make_orso_project.py  nonUniqueContrast.mat  orso_validation.json  plotting_data.pickle  prist.json
(+91 files in other folders)
