[build-system]
requires = [
    'setuptools>=61',
    'wheel',
    'pybind11>=2.4',
]
build-backend = 'setuptools.build_meta'

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "F",   # pyflakes
          "UP",  # pyupgrade
          "B",   # flake8-bugbear
          "SIM", # flake8-simplify
          "I",   # isort
          "D"]  # pydocstyle

ignore = ["SIM103", # needless bool
          "SIM108", # if-else block instead of ternary operator
          "D105",   # undocumented __init__
          "D107",   # undocumented magic method
          "D203",   # blank line before class docstring
          "D213"]   # multi line summary should start at second line

# ignore docstring lints in the tests and install script
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"setup.py" = ["D"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"


