[build-system]
requires = [
    'setuptools>=61',
    'wheel',
    'pybind11>=2.4',
]
build-backend = 'setuptools.build_meta'

[project]
name = "ratapi"
version = "0.0.0.dev8"
description = "Python extension for the Reflectivity Analysis Toolbox (RAT)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.3",
    "numpy>=1.20",
    "orsopy>=1.2.1",
    "pint>=0.24.4",
    "prettytable>=3.9.0",
    "pybind11>=2.4",
    "pydantic>=2.7.2",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.10",
    "scipy>=1.13.1",
    "strenum>=0.4.15 ; python_full_version < '3.11'",
    "tqdm>=4.66.5",
]

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "F",   # pyflakes
          "UP",  # pyupgrade
          "B",   # flake8-bugbear
          "SIM", # flake8-simplify
          "I",   # isort
          "D"]  # pydocstyle

ignore = ["SIM103", # needless bool
          "SIM108", # if-else block instead of ternary operator
          "D105",   # undocumented __init__
          "D107",   # undocumented magic method
          "D203",   # blank line before class docstring
          "D213"]   # multi line summary should start at second line

# ignore docstring lints in the tests and install script
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"setup.py" = ["D"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["ratapi.rat_core"]
